# machinel

./: README.md  bagging
machinelhw1/: machinelhw1.aux  machinelhw1.tex
machinelhw2/: Homework2.aux  Homework2.tex  Pred_nb.mat  dictionary.mat  handout.mat  nb_run.m  nb_train.m
machinelhw2/publish/: hw2.tgz  nb_test.m
machinelhw3/: HW3.tgz
machinelhw3/LogisticRegression/: costLR.m  run_logit.m  trainLR.m
machinelhw3/NN/: runDigits.m
machinelhw3/Theory/: hw3theory.aux  hw3theory.blg  hw3theory.tex
machinelhw3/data/: non_linear.mat
machinelhw3/submission/: README.txt  initializeParameters.m  predictLR.m  show_centroids.m
machinelhw4/: note  note~
machinelhw4/report/: ploterr.eps  report.aux  report.tex
machinelhw4/svm/: 2.2q  4fold-plot.eps  ConstructInterval.m  PartitionCrossSet.m  PartitionHeldOut.m  TrainCrossSet.m  TrainHeldOut.m  alvin.m  gaussian_kernel.m  hw4part1.tgz  hw4part2.tgz  hw4part3.tgz  (+9 more)
machinelhw5/: homework.fdb_latexmk  homework.tex
machinelhw6/: computeDictionary.m  data.mat  dictionary.mat  hw6.tgz  k_means.m  k_means_old.m  segmentation.m  testKMeans.m
machinelhw6/image/src/: Makefile  __bilateral__.cc  __boundary__.cc  __custom_gaussian_smoothing__.cc  __spatial_filtering__.cc  bootstrap  bwdist.cc  bwfill.cc  bwlabeln.cc  config.h.in  configure.ac  graycomatrix.cc  hough_line.cc  imerode.cc  nonmax_supress.cc  rotate_scale.cc  strel.cc  strel.h  undef_unordered_map.h  union-find.h++
machinelhw7/: hw7.aux  hw7.tex  po.m  pqao.m
machinelhw8/: ref
mid-term/: mid-term-review.aux  mid-term-review.tex
reference/: prob-axioms-wiki
(+134 files in other folders)
